doc/pjdfstest/tests/errors/eexist/sidebar-items.js
window.SIDEBAR_ITEMS = {"macro":["eexist_file_exists_test_case"]};